Update using virtual and platform threads